--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+		{% endblock %}
+
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Gestion des articles</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-collapse collapse show" id="navbarColor01" style="">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{path("app_home")}}">Accueil</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{path("article_create")}}">Nouvel article</a>
+						</li>
+
+					</ul>
+					<ul class="navbar-nav">
+						{% if app.user %}
+							<li class="nav-item">
+								<a class="nav-link" aria-current="page">{{app.user.prenom}}
+									{{app.user.nom}}</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{path("app_logout")}}">Déconnexion</a>
+							</li>
+
+						{% else %}
+
+
+							<li class="nav-item">
+								<a class="nav-link" aria-current="page" href="{{path("app_register")}}">Inscription</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{path("app_login")}}">Connexion</a>
+							</li>
+						{% endif %}
+					</ul>
+
+				</div>
+			</div>
+		</nav>
+
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
+		</body>
+	</html>
